# Ascend-YOLO-Infer

./: .gitignore  README.md
common/src/: AclLiteImageProc.cpp  ResizeHelper.cpp
src/: .gitignore  CMakeLists.txt  NPU_FULL_PIPELINE_PLAN.md  label.h  sampleYOLOV8.cpp  sampleYOLOV8Cls.cpp  sampleYOLOV8Obb.cpp  sampleYOLOV8Pose.cpp  sampleYOLOV8Seg.cpp  sampleYOLOV8_npu-rtsp-process.cpp  sampleYOLOV8_npu-rtsp-thread.cpp  sampleYOLOV8_npu-rtsp.cpp  sampleYOLOV8_npu.cpp
src/model/: aipp_1280.cfg  export_model.md  fusion_result.json  ge_check_op.json
src/model/ASCEND_seg_310B_V1.0.0_Beta_20260319171418/: config.json  dataset.yaml  labels.json
src/model/kernel_meta_temp_10006234433838927310/: task_pid_728193_728541.txt  task_pid_728193_728542.txt  task_pid_728193_728543.txt  task_pid_728193_728544.txt  task_pid_728193_728545.txt  task_pid_728193_728546.txt  task_pid_728193_728547.txt  task_pid_728193_728548.txt
src/scripts/: build_static_nms_onnx.py  sample_build.sh
